Label z-index issue fixed, ps single select tag width 100%

--- a/wwwroot/css/FormBuiderStyles.css
+++ b/wwwroot/css/FormBuiderStyles.css
@@ -672,16 +672,22 @@ tr[agg='true'] [coltype='DGNumericColumn'] span {
 }
 
 .eb-ctrl-label {
+    position: relative;
     font-size: 11.5px;
     font-weight: bold;
     padding: 1px;
     padding: 2px 0px;
     display: inline-block;
     margin: 1px 0;
+    z-index: -1;
 }
 
 [isrendermode="True"] [eb-hidden="True"] {
     display: none;
+}
+
+[singleselect="true"] .selected-tag {
+    width: calc(100% - 6px);
 }
 
 .helpText {
